# routes/adminRouter.js
@@ -3,42 +3,30 @@ const router = express.Router();
 const { verifyToken, verifyRole } = require("../middlewares/authMiddleware");
 const adminController = require("../controllers/adminController");
 
-/**
- * @swagger
- * /api/v1/admin/add-guru-bk:
- *   post:
- *     tags: ['Super Admin']
- *     summary: Tambah data guru BK
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       201:
- *         description: Guru BK berhasil ditambahkan
- */
 router.post(
   "/add-guru-bk",
   verifyToken,
   verifyRole("super_admin"),
   adminController.addGuruBk
+  /*
+    #swagger.tags = ['Super Admin']
+    #swagger.summary = 'Tambah data guru BK'
+    #swagger.description = 'Endpoint untuk menambah data Guru BK (hanya Super Admin).'
+    #swagger.security = [{ "bearerAuth": [] }]
+  */
 );
 
-/**
- * @swagger
- * /api/v1/admin/add-siswa:
- *   post:
- *     tags: ['Super Admin']
- *     summary: Tambah data siswa
- *     security:
- *       - bearerAuth: []
- *     responses:
- *       201:
- *         description: siswa berhasil ditambahkan
- */
 router.post(
   "/add-siswa",
   verifyToken,
   verifyRole("super_admin"),
   adminController.addSiswa
+  /*
+    #swagger.tags = ['Super Admin']
+    #swagger.summary = 'Tambah data siswa'
+    #swagger.description = 'Endpoint untuk menambah data siswa (hanya Super Admin).'
+    #swagger.security = [{ "bearerAuth": [] }]
+  */
 );
 
 router.get(
@@ -46,6 +34,11 @@ router.get(
   verifyToken,
   verifyRole("super_admin"),
   adminController.getAllUsers
+  /*
+    #swagger.tags = ['Super Admin']
+    #swagger.summary = 'Lihat semua pengguna'
+    #swagger.security = [{ "bearerAuth": [] }]
+  */
 );
 
 module.exports = router;
