# routes/guruBkRouter.js
@@ -3,19 +3,16 @@ const router = express.Router();
 const { verifyToken, verifyRole } = require("../middlewares/authMiddleware");
 const guruBkController = require("../controllers/guruBkController");
 
-/**
- * @swagger
- * /api/v1/guru-bk/siswa:
- *   get:
- *     tags:
- *       ['Guru BK']
- *     summary: Ambil semua siswa bimbingan untuk guru BK
- */
 router.get(
   "/siswa",
   verifyToken,
   verifyRole("guru_bk"),
   guruBkController.getSiswaBimbingan
+  /*
+    #swagger.tags = ['Guru BK']
+    #swagger.summary = 'Ambil semua siswa bimbingan'
+    #swagger.security = [{ "bearerAuth": [] }]
+  */
 );
 
 module.exports = router;
